[tool.poetry]
name = "cdda_tool"
version = "0.1.0"
description = "cdda-tool is a tool for interacting with JSON data consumed by the game Cataclysm: Dark Days Ahead."
authors = ["Damien Wilson <damien@mindglob.com>"]
repository = "https://github.com/cataclysm-mods/cdda-tool/"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
cleo = "^0.7.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
cdda-tool = "cdda_tool.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
